<resources>
    <string name="app_name">Comp3004project</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_graph">Graph</string>
    <string name="textView1">Testing</string>
    <string name="button1">Click</string>
    <string name="calories">Calories:</string>
    <string name="daily_amount">***.**</string>
    <string name="create_button">CREATE</string>
    <string name="update_button">UPDATE</string>
    <string name="delete_button">DELETE</string>
    <string name="log_title">Day-Day Record</string>
    <string name="user_icon">TODO</string>
    <string name="notifications">Notifications</string>
    <string name="LoginBackground" />
    <string name="editText_noValue" />
    <string name="editTextHint_userName">User Name</string>
    <string name="editTextHint_Email">Email</string>
    <string name="editTextHint_Password">Password</string>
    <string name="signupButton">Sign Up</string>
    <string name="goLoginButton">Already Signed up? Go to Log in</string>
    <string name="LoginButton">Log In</string>
    <string name="goResgisterButton">Dont have an Account? Go to Sign Up</string>
    <string name="Notification_textView" />
    <string name="Notification_Logout">Log Out</string>
    <string name="Home_textView" />
    <string name="PersonalFile_Name">Name:</string>
    <string name="PersonalFile_ChangeNameButton">Set Name</string>
    <string name="ResetPasswordButton">Reset Password</string>
    <string name="DeleteAccountButton">Delete This Account</string>
    <string name="SetNameActicityEditText" />
    <string name="SetNameActivityEditHint">Enter your Name</string>
    <string name="SetNameActivityButton">Set Name</string>
    <string name="PersonalFileTitle">Personal File</string>
    <string name="GoToPersonalFileButton">Check Personal File</string>
    <string name="textView_ReturnPage">Return Previous Page</string>
</resources>
